--- a/code/settings.json
+++ b/code/settings.json
@@ -1,6 +1,8 @@
 // Place your settings in this file to overwrite the default settings
 {
 	"editor.fontFamily": "Source Code Pro",
-	"editor.fontSize": 12
+	"editor.fontSize": 12,
+	"workbench.editor.limit.enabled": true,
+	"workbench.editor.limit.value": 5
 		
 }
